<resources>
    <string name="app_name">Inspection sheet</string>
    <string name="action_settings">Settings</string>
    <string name="start_session">Start new session</string>
    <string name="end_session">End session</string>
    <string name="line_seassion">Tower session</string>
    <string name="tp_session">TP/KTP session</string>
    <string name="station_session">Station session</string>
    <string name="send_data">Send data to server</string>
    <string name="gps_accuracy">GPS accuracy:</string>
    <string name="gps_accuracy_value">not available</string>
    <string name="line_session">Line session</string>
    <string name="towerNameLabel">Tower name</string>
    <string name="towerMaterialLabel">Tower material</string>
    <string name="wood">wood</string>
    <string name="save">save</string>
    <string name="enter_line_name_label">Enter line name:</string>
    <string name="line_name_desc">Name line</string>
    <string name="next">next</string>
    <string name="error">Error!</string>
    <string name="stopSessionButton">save and stop session</string>
    <string name="saveTower">save tower to line</string>
    <string name="current_location_label">Current location:</string>
    <string name="status_search">searching location...</string>
    <string name="accuracy_label">Accuracy:</string>
    <string name="not_available">not available</string>
    <string name="line_name_label">Line name:</string>
    <string name="location_time_label">Time of location:</string>
    <string name="saveTowerUnavaleble">save not avalable (wait all green)</string>
    <string name="stopSessionButtonWithoutSaveTower">end collect towers</string>
    <string name="success">Success!</string>
    <string name="success_save">Data success save to db!</string>
    <string name="error_save_to_db">Error save data to db!</string>
    <string name="new_defect_text">Defect registration</string>
    <string name="bt_new_vl04_session">Vl 04 kV</string>
    <string name="new_vl_6_10_kv">Vl 6-10 kV</string>
    <string name="searchNearLinesCbText">Search in near lines</string>
    <string name="selectBySpResBt">Select by Sp and Res</string>
</resources>
