<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ru.drsk.progserega.towertracker.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gps_accuracy"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/gpsAccuracy"
                android:layout_weight="1"
                android:text="@string/gps_accuracy_value" />
        </LinearLayout>

        <Button
            android:onClick="startSession (MainActivity)"
            android:text="@string/start_session"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/startSessionButton" />

        <Button
            android:text="@string/send_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sendDataButton" />
    </LinearLayout>

</RelativeLayout>
