<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_line_name"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.drsk.progserega.towertracker.LineName">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/enter_line_name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/enterLineNameLabel"
            android:contentDescription="@string/line_name_desc" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/line_name"
            android:contentDescription="@string/line_name_desc" />

        <Button
            android:onClick="startAddTower"
            android:text="@string/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nameLineSave" />
    </LinearLayout>
</RelativeLayout>
